[package]
name = "pathos-python-parser"
description = "A straightforward and fast Python parser"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"

[[bin]]
name = "pathos"
path = "src/bin/pathos.rs"
required-features = ["cli"]

[features]
# By default, we use num-bigint because it's more
# liberally licensed than GMP
default = ["num-bigint", "unicode"]
# Enable unicode support.
#
# This is only needed to support named escapes
# in strings, which requires large generated tables.
unicode = ["unicode-named-escapes"]
# Support named escapes in string literals (\N{Example})
# This requires large tables to be included in
# the binary.
unicode-named-escapes = []
# Support serde serialization of the AST
serialize = ["serde", "serde_derive", "serde_with", "rug/serde", "num-bigint/serde"]
# Support json serialization (using serde)
json = ["serialize", "serde_json"]
# CLI support
cli = ["clap", "json", "serialize", "anyhow", "tempfile"]

[dependencies]
logos = "0.12"
memchr = "2.4"
either = "1"
hashbrown = "0.11.2"
arrayvec = "0.7.1"
# Rug backend for BigInteger arithmetic
rug = { version = "1.12", optional = true }
num-bigint = { version = "0.4.0", optional = true }
# Bump allocation
bumpalo = "3.7"
ordered-float = "2.5"
# Better derive
educe = "0.4"
# Errors
thiserror = "1"
anyhow = { version = "1", optional = true }
# Serde support
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_json = { version = "1", optional = true }
serde_with = { version = "1.9", optional = true }
# CLI Parsing
clap = { version = "3.0.0-beta.2", optional = true }
tempfile = { version = "3", optional = true }

[dependencies.lexical-core]
version = "0.7.6"
# Used for parsing floats
features = ["correct",  "format"]
default-features = false

[dev-dependencies]
pretty_assertions = "0.7.2"
