[package]
name = "pathos"
description = "A framework for writing recursive decent parsers"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"
# Not fit for crates.io
publish = false

[features]
default = []
# Fancier errors
fancy-errors = ["ariadne"]
# Serialization
serialize = ["serde_with", "serde"]

[dependencies]
educe = "0.4"
memchr = "2.4"
either = "1"
hashbrown = "0.11.2"
arrayvec = "0.7.1"
fixedbitset = "0.4.0"
# Bump allocation
bumpalo = "3.7"
ordered-float = "2.5"
# Errors
thiserror = "1"
# Fancy errors (optional)
ariadne = { version = "0.1.2", optional = true }
# Serialization
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
serde_with = { version = "1.9", optional = true }

[dev-dependencies]
pretty_assertions = "0.7.2"

[workspace]
members = ["lib/python-parser", "lib/python-ast", "lib/python-cli", "lib/unicode"]